--- a/paper.tex
+++ b/paper.tex
@@ -304,7 +304,7 @@ Let us summarize all possible cases for $G$ and $\GroupExtension{G}$. Let $$w_n 
 	\item (Special even orthogonal groups): $\quadraticExtension = \finiteField$ and $\epsilon_{\hermitianSpace} = 1$. Denote $\dim_{\finiteField} \hermitianSpace = 2n$. It follows by definition that every element $g \in \IsometryGroup\left(\hermitianSpace\right)$ satisfies $\left(\det g\right)^2 = 1$. Similarly, every element $g \in \widetilde{\IsometryGroup\left(\hermitianSpace\right)}$ satisfies $\left(\det g\right)^2 = \similitudeCharacter\left(g\right)^{2n}$. In this case, we obtain the connected components of the identity by adding a restriction on the determinant: We have that $G$ consists of all elements $g \in \IsometryGroup\left(\hermitianSpace\right)$ with $\det \hermitianSpace = 1$, and that $\GroupExtension{G}$ consists of all elements $g \in \GroupExtension{\IsometryGroup\left(\hermitianSpace\right)}$ such that $\det g = \similitudeCharacter\left(g\right)^n$. There are two cases here.
 	\begin{enumerate}
 		\item Split case: in this case, we can write $\hermitianSpace = \xIsotropic \oplus \yIsotropic$ where $\xIsotropic$ and $\yIsotropic$ are totally isotropic (that is, for every $x \in \xIsotropic$, $\innerproduct{x}{x} = 0$ and similarly for $\yIsotropic$) and these spaces are in duality with respect to $\innerproduct{\cdot}{\cdot}$, i.e., the map $\yIsotropic \to \Hom_{\finiteField}\left(\xIsotropic, \finiteField\right)$ given by $y \mapsto \left(x \mapsto \innerproduct{x}{y}\right)$ is an isomorphism. In this case, we have that $G$ is isomorphic to $\SO^{+}_{2n}\left(\finiteField\right) \subset  \GL_{2n}\left(\finiteField\right)$, defined as the $\finiteField$-points of $$\algebraicGroup{\SO}^{+}_{2n} = \left\{g \in \algebraicGroup{\GL}_{2n} \mid \transpose{g} w_{2n} g  = w_{2n},\,\, \det g = 1\right\}.$$
-		The group $\GroupExtension{G}$ is isomorphic to the subgroup $\GSO^{+}_{2n}\left(\finiteField\right)$ of $\GL_{2n}\left(\finiteField\right)$, consisting of elements $g$ such that defined as the projection to the first coordinate of the $\finiteField$-points of $$\algebraicGroup{\GSO}^{+}_{2n} = \left\{\left(g, \lambda\right) \in \algebraicGroup{\GL}_{2n} \times \multiplcativeScheme \mid \transpose{g} w_{2n} g = \lambda w_{2n},\,\, \det g = \lambda^n\right\}.$$
+		The group $\GroupExtension{G}$ is isomorphic to the group $\GSO^{+}_{2n}\left(\finiteField\right) \subset \GL_{2n}\left(\finiteField\right)$, defined as the projection to the first coordinate of the $\finiteField$-points of $$\algebraicGroup{\GSO}^{+}_{2n} = \left\{\left(g, \lambda\right) \in \algebraicGroup{\GL}_{2n} \times \multiplcativeScheme \mid \transpose{g} w_{2n} g = \lambda w_{2n},\,\, \det g = \lambda^n\right\}.$$
 		\item Non-split case: In this case, there exists a decomposition $$\hermitianSpace = \xIsotropic \oplus \hermitianSpace' \oplus \yIsotropic,$$
 		where $\xIsotropic$ and $\yIsotropic$ are totally isotropic spaces in duality and $\hermitianSpace'$ is an antisotropic space (that is, for any $0 \ne v' \in \hermitianSpace'$, we have $\innerproduct{v'}{v'} \ne 0$) of dimension 2. Let $d$ be an element of $\multiplicativegroup{\finiteField}$ that is not a square. Denote $$B_{n,d} = \begin{pmatrix}
 			\IdentityMatrix{n-1}\\
@@ -313,7 +313,7 @@ Let us summarize all possible cases for $G$ and $\GroupExtension{G}$. Let $$w_n 
 			& & & \IdentityMatrix{n-1}
 		\end{pmatrix} \cdot w_{2n}.$$
 		In this case, we have that $G$ is isomorphic to $\SO^{-}_{2n}\left(\finiteField\right) \subset  \GL_{2n}\left(\finiteField\right)$, defined as the $\finiteField$-points of $$\algebraicGroup{\SO}^{-}_{2n} = \left\{g \in \algebraicGroup{\GL}_{2n} \mid \transpose{g} B_{n,d} g = B_{n,d},\,\, \det g = 1\right\}.$$
-		The group $\GroupExtension{G}$ is isomorphic to the subgroup $\GSO^{-}_{2n}\left(\finiteField\right)$ of $\GL_{2n}\left(\finiteField\right)$, consisting of elements $g$ such that defined as the projection to the first coordinate of the $\finiteField$-points of $$\algebraicGroup{\GSO}^{-}_{2n} = \left\{\left(g, \lambda\right) \in \algebraicGroup{\GL}_{2n} \times \multiplcativeScheme \mid \transpose{g} B_{n,d} g = \lambda B_{n,d},\,\, \det g = \lambda^n\right\}.$$
+		The group $\GroupExtension{G}$ is isomorphic to the group $\GSO^{-}_{2n}\left(\finiteField\right) \subset \GL_{2n}\left(\finiteField\right)$, defined as the projection to the first coordinate of the $\finiteField$-points of $$\algebraicGroup{\GSO}^{-}_{2n} = \left\{\left(g, \lambda\right) \in \algebraicGroup{\GL}_{2n} \times \multiplcativeScheme \mid \transpose{g} B_{n,d} g = \lambda B_{n,d},\,\, \det g = \lambda^n\right\}.$$
 	\end{enumerate}
 	\item (Symplectic groups): $\quadraticExtension = \finiteField$ and $\epsilon_{\hermitianSpace} = -1$. In this case, $\dim_{\finiteField} \hermitianSpace = 2n$ for some positive integer $n$ and $G$ is isomorphic to the group $\Sp_{2n}\left(\finiteField\right) \subset  \GL_{2n}\left(\finiteField\right)$, defined as the $\finiteField$-points of $$\algebraicGroup{\Sp}_{2n} = \left\{g \in \algebraicGroup{\GL}_{2n} \mid \transpose{g} \begin{pmatrix}
 		& w_n\\
