--- a/paper.tex
+++ b/paper.tex
@@ -616,9 +616,9 @@ for $\zeta_n$ being a $q^n-1$ root of unity corresponding to $1/(q^n-1) \in (\ma
 
 We say that $(\algebraicGroup{T},\theta)$ is a \emph{torus character pair} for $\algebraicGroup{G}^{\Frobenius}$ if $\algebraicGroup{T} \subset \algebraicGroup{G}$ is a maximal torus and $\theta \colon \algebraicGroup{T}^{\Frobenius} \to \multiplicativegroup{\cComplex}$ is a character. By the discussion above, given a torus character pair  $(\algebraicGroup{T},\theta)$ for $\algebraicGroup{G}^{\Frobenius}$, we may conjugate $\algebraicGroup{T}$ to a fixed torus $\algebraicGroup{T}'$ and associate to $\theta$ a twisted Frobenius (twisted by an element of $W\left(\algebraicGroup{T}\right)$ in the twisted Weyl group conjugacy class corresponding to $\algebraicGroup{T}$) stable element $x_{\algebraicGroup{T},\theta}$ of $\CharacterLattice{\algebraicGroup{T}'}_{(\mathbb{Q}/\mathbb{Z})_{p'}}$ via the equality
 \[
-    \exp(\langle x_{T,\theta},y\rangle) = \theta(\aFieldNorm_{\algebraicGroup{T}^{\Frobenius^n}:\algebraicGroup{T}^{\Frobenius}}(y(\zeta_n)))
+    \exp(\innerproduct{x_{\algebraicGroup{T},\theta}}{y}) = \theta(\aFieldNorm_{\algebraicGroup{T}^{\Frobenius^n}:\algebraicGroup{T}^{\Frobenius}}(y(\zeta_n)))
 \]
-for large enough $n$. This $x_{T,\theta}$ is well defined up to the Weyl group, and in fact, by \cite[Corollary 13.9]{DigneMichel2020} there is a correspondence between $(T,\theta)$ pairs and $\Frobenius$-stable Weyl group orbits in $\CharacterLattice{\algebraicGroup{T}'}_{(\mathbb{Q}/\mathbb{Z})_{p'}}$.  Using the given the identification $\CharacterLattice{\algebraicGroup{T}} = \CocharacterLattice{\algebraicGroup{T}^{\ast}}$ and composing with \eqref{eq:DL}, we associate to a torus character pair a Frobenius stable semisimple conjugacy class in $\algebraicGroup{G}^*$.
+for large enough $n$. This $x_{\algebraicGroup{T},\theta}$ is well defined up to the Weyl group, and in fact, by \cite[Corollary 13.9]{DigneMichel2020} there is a correspondence between torus character pairs $(\algebraicGroup{T},\theta)$ and $\Frobenius$-stable Weyl group orbits in $\CharacterLattice{\algebraicGroup{T}'}_{(\mathbb{Q}/\mathbb{Z})_{p'}}$.  Using the given the identification $\CharacterLattice{\algebraicGroup{T}} = \CocharacterLattice{\algebraicGroup{T}^{\ast}}$ and composing with \eqref{eq:DL}, we associate to a torus character pair a Frobenius stable semisimple conjugacy class in $\algebraicGroup{G}^*$.
 
     Denote the Frobenius semisimple conjugacy class associated to a torus character pair $(\algebraicGroup{T},\theta)$ by $(s_{\algebraicGroup{T},\theta})$. Similarly, denote the $\Frobenius$-stable Weyl group orbit in $\CharacterLattice{\algebraicGroup{T}}_{(\mathbb{Q}/\mathbb{Z})_{p'}}$ corresponding to $(\algebraicGroup{T},\theta)$ by $(x_{\algebraicGroup{T},\theta}).$
 
