Writing an example

--- a/paper.tex
+++ b/paper.tex
@@ -614,7 +614,7 @@ By \cite[Proposition 13.7 (ii)]{DigneMichel2020}, we have an exact sequence
 with the last map being $y \mapsto \aFieldNorm_{\algebraicGroup{T}^{\Frobenius^n}:\algebraicGroup{T}^{\Frobenius}}(y(\zeta_n))$
 for $\zeta_n$ being a $q^n-1$ root of unity corresponding to $1/(q^n-1) \in (\mathbb{Q}/\mathbb{Z})_{p'}$ and sufficiently large $n$ (large enough so that $\algebraicGroup{T}\left(\finiteFieldExtension{n}\right)$ is split). Here, $$\aFieldNorm_{\algebraicGroup{T}^{\Frobenius^n}:\algebraicGroup{T}^{\Frobenius}}(t) = t\cdot \Frobenius(t)\cdot \Frobenius^2(t)\cdot  \hdots \cdot \Frobenius^{n-1}(t)$$ is the torus norm map.
 
-We say that $(\algebraicGroup{T},\theta)$ is a \emph{torus character pair} for $\algebraicGroup{G}^{\Frobenius}$ if $\algebraicGroup{T} \subset \algebraicGroup{G}$ is a maximal torus and $\theta \colon \algebraicGroup{T}^{\Frobenius} \to \multiplicativegroup{\cComplex}$ is a character. By the discussion above, given a torus character pair  $(\algebraicGroup{T},\theta)$ for $\algebraicGroup{G}^{\Frobenius}$, we may conjugate $\algebraicGroup{T}$ to a fixed torus $\algebraicGroup{T}'$ and associate to $\theta$ a twisted Frobenius (twisted by an element of $W\left(\algebraicGroup{T}\right)$ in the twisted Weyl group conjugacy class corresponding to $\algebraicGroup{T}$) stable element $x_{\algebraicGroup{T},\theta}$ of $\CharacterLattice{\algebraicGroup{T}'}_{(\mathbb{Q}/\mathbb{Z})_{p'}}$ via the equality
+We say that $(\algebraicGroup{T},\theta)$ is a \emph{torus character pair} for $\algebraicGroup{G}^{\Frobenius}$ if $\algebraicGroup{T} \subset \algebraicGroup{G}$ is a maximal torus and $\theta \colon \algebraicGroup{T}^{\Frobenius} \to \multiplicativegroup{\ladicnumbers}$ is a character. By the discussion above, given a torus character pair  $(\algebraicGroup{T},\theta)$ for $\algebraicGroup{G}^{\Frobenius}$, we may conjugate $\algebraicGroup{T}$ to a fixed torus $\algebraicGroup{T}'$ and associate to $\theta$ a twisted Frobenius (twisted by an element of $W\left(\algebraicGroup{T}\right)$ in the twisted Weyl group conjugacy class corresponding to $\algebraicGroup{T}$) stable element $x_{\algebraicGroup{T},\theta}$ of $\CharacterLattice{\algebraicGroup{T}'}_{(\mathbb{Q}/\mathbb{Z})_{p'}}$ via the equality
 \[
     \exp(\innerproduct{x_{\algebraicGroup{T},\theta}}{y}) = \theta(\aFieldNorm_{\algebraicGroup{T}^{\Frobenius^n}:\algebraicGroup{T}^{\Frobenius}}(y(\zeta_n)))
 \]
@@ -623,6 +623,13 @@ for large enough $n$. This $x_{\algebraicGroup{T},\theta}$ is well defined up to
     Denote the Frobenius semisimple conjugacy class associated to a torus character pair $(\algebraicGroup{T},\theta)$ by $(s_{\algebraicGroup{T},\theta})$. Similarly, denote the $\Frobenius$-stable Weyl group orbit in $\CharacterLattice{\algebraicGroup{T}}_{(\mathbb{Q}/\mathbb{Z})_{p'}}$ corresponding to $(\algebraicGroup{T},\theta)$ by $(x_{\algebraicGroup{T},\theta}).$
 
 We say that the torus character pairs $(\algebraicGroup{T},\theta)$ and $(\algebraicGroup{T}',\theta')$ for $\algebraicGroup{G}$ are \emph{geometrically conjugate} if the geometric conjugacy classes $(s_{\algebraicGroup{T},\theta})$ and $(s_{\algebraicGroup{T}',\theta'})$ are equal. This is equivalent to the following: there exists $n \ge 1$ and $h \in {\algebraicGroup{G}}^{\Frobenius^n}$ such that $h \algebraicGroup{T}^{\Frobenius^n} h^{-1} = \left(\algebraicGroup{T}'\right)^{\Frobenius^n}$ and such that $$\theta\left(\aFieldNorm_{\algebraicGroup{T}^{\Frobenius^n}:\algebraicGroup{T}^{\Frobenius}}\left(t\right)\right) = \theta'\left(\aFieldNorm_{\left(\algebraicGroup{T}'\right)^{\Frobenius^n}:\left(\algebraicGroup{T}'\right)^{\Frobenius}}\left(h t h^{-1}\right)\right),$$ for any $t \in \algebraicGroup{T}^{\Frobenius^n}$.
+
+\begin{example}
+	Take $\algebraicGroup{T}'_2 = \restrictionOfScalars{\finiteFieldExtension{2}}{\finiteField}{\multiplcativeScheme}$ and $$\algebraicGroup{T}_2 = \left\{x \in \restrictionOfScalars{\finiteFieldExtension{2}}{\finiteField}{\multiplcativeScheme} \mid x \involution{x} = 1 \right\}.$$
+	Then $\left(\algebraicGroup{T}'_2\right)^{\Frobenius} = \multiplicativegroup{\finiteFieldExtension{2}}$ and $\algebraicGroup{T}_2^{\Frobenius} = \NormOneGroup{2}$. Let $\theta \colon \NormOneGroup{2} \to \multiplicativegroup{\ladicnumbers}$ be a character, and let $\theta' \colon \multiplicativegroup{\finiteFieldExtension{2}} \to \multiplicativegroup{\ladicnumbers}$ be the character given bv $$\theta'\left(x\right) = \theta\left(x^{1-q}\right).$$
+	We claim that the torus character pairs $\left(\algebraicGroup{T}_2 \times \algebraicGroup{T}_2, \theta \times \theta\right)$ and $\left(\algebraicGroup{T}'_2, \theta'\right)$ are geometrically conjugate. Indeed, if $m \ge 2$ is even, then $\left(\algebraicGroup{T}'_2\right)^{\Frobenius^{m}} = \multiplicativegroup{\finiteFieldExtension{m}} \times \multiplicativegroup{\finiteFieldExtension{m}}$ and $\algebraicGroup{T}_2^{\Frobenius^m} = \multiplicativegroup{\finiteFieldExtension{m}}$. The norm map $\left(\algebraicGroup{T}'_2\right)^{\Frobenius^{m}} \to \left(\algebraicGroup{T}'_2\right)^{\Frobenius}$ is given by $\multiplicativegroup{\finiteFieldExtension{m}} \times \multiplicativegroup{\finiteFieldExtension{m}} \ni \left(x,y\right) \mapsto \FieldNorm{m}{2}\left(x\right) \FieldNorm{m}{2}\left(y\right)$, while the norm map $\algebraicGroup{T}_2^{\Frobenius^{m}} \to \algebraicGroup{T}_2^{\Frobenius}$ is given by $\multiplicativegroup{\finiteFieldExtension{m}} \ni x \mapsto \FieldNorm{m}{2}\left(x\right)^{1-q}$. We thus have
+	$$\left(\theta \times \theta\right) \circ \aFieldNorm_{ \left(\algebraicGroup{T}_2 \times \algebraicGroup{T}_2\right)^{\Frobenius^m} : \left(\algebraicGroup{T}_2 \times \algebraicGroup{T}_2\right)^{\Frobenius} } = \theta' \circ \aFieldNorm_{\left(\algebraicGroup{T}'_2\right)^{\Frobenius^m} \colon \left(\algebraicGroup{T}'_2\right)^{\Frobenius}}.$$
+\end{example}
 
 The \emph{geometric Lusztig series} $\LusztigSeries{\algebraicGroup{G}^{\Frobenius}}{s}$ associated to a Frobenius stable geometric conjugacy class $(s) \subset \algebraicGroup{G}^*$ consists of all (equivalence classes of) irreducible representations $\pi$ which appear with non-zero multiplicity in $R_{\algebraicGroup{T}, \theta}$ for some $(T,\theta)$ such that $(s_{\algebraicGroup{T},\theta}) = (s)$.
 
